# spatialdata-db

./: .cruft.json  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  Sandbox.ipynb  pyproject.toml  sandbox.ipynb
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: build.yaml  release.yaml  test.yaml
10jff__10X__Visium__Mouse__brain__20191202__v1.0.0_metadata.zarr/: zmetadata
10jff__10X__Visium__Mouse__brain__20191202__v1.0.0_metadata.zarr/metadata/: metadata.csv
data/002c0__10X__Visium__Human__ovary__20201027__v1.2.0/: 002c0_to_zarr.py
data/02uqv__10X__Visium__Mouse__brain__20191202__v1.0.0/: 02uqv_to_zarr.py
data/05rko__10X__Visium__Mouse__brain__20191202__v1.0.0/: 05rko_to_zarr.py
data/09ohz__10X__Visium__Mouse__brain__20191202__v1.0.0/: 09ohz_to_zarr.py
data/0badu__10X__Xenium__Mouse__brain__20230122__v1.0.2__Replicate2/: 0badu_to_zarr.py
data/0bbcf__10X__Xenium__Human__skin__20240305__v1.9.0__Sample2/: 0bbcf_to_zarr.py
data/0kbsa__10X__Visium__Mouse__brain__20200623__v1.1.0/: 0kbsa_to_zarr.py
data/0nuqa__10X__Visium__Human__ovary__20201027__v1.2.0/: 0nuqa_to_zarr.py
data/0pknt__10X__Visium__Human__breast__20191212__v1.0.0/: 0pknt_to_zarr.py
data/0ufac__10X__Visium__Mouse__lung_brain__20230221__v2.0.1__BrainReplicate2/: 0ufac_to_zarr.py
data/1000j__10X__Visium__Human__large_intestine__20220328__v1.3.0/: 1000j_to_zarr.py
data/1001e__10X__Visium__Mouse__embryo__20230608__v2.1.0/: 1001e_to_zarr.py
data/10040__10X__Xenium__Human__bone_bone_marrow__20240403__v1.9.0__Non-diseasedBoneMarrow/: 10040_to_zarr.py
data/10053__10X__Visium__Mouse__brain__20220329__v1.3.0/: 10053_to_zarr.py
data/10056__10X__Visium__Mouse__brain__20230417__v2.0.1/: 10056_to_zarr.py
data/1005m__10X__Visium__Human__prostate__20210609__v1.3.0/: 1005m_to_zarr.py
data/100my__10X__Visium__Human__breast__20230106__v2.0.1/: 100my_to_zarr.py
data/100w1__10X__Visium__Human__prostate__20210727__v1.3.0/: 100w1_to_zarr.py
data/100wk__10X__Visium__Mouse__brain__20200623__v1.1.0/: 100wk_to_zarr.py
data/1012t__10X__Visium__Human__brain_cerebellum__20201027__v1.2.0/: 1012t_to_zarr.py
data/101cw__10X__Visium__Human__spinal_cord__20201027__v1.2.0/: 101cw_to_zarr.py
data/101in__10X__Visium__Mouse__kidney__20200623__v1.1.0/: 101in_to_zarr.py
data/101s6__10X__Visium__Mouse__brain__20230417__v2.0.1/: 101s6_to_zarr.py
data/101t3__10X__Xenium__Human__intestine_colon__20230829__v1.6.0__Non-diseasedpre-designed+add-onpanel/: 101t3_to_zarr.py
data/101tu__10X__Xenium__Human__breast__20230122__v1.0.2__Replicate1/: 101tu_to_zarr.py
data/101x5__10X__Xenium__Human__breast__20230122__v1.0.2__Tissuesample1/: 101x5_to_zarr.py
data/1020c__10X__Visium__Mouse__brain__20191202__v1.0.0/: 1020c_to_zarr.py
data/1020d__10X__Xenium__Human__tonsil__20240305__v1.9.0__Follicularlymphoidhyperplasia/: 1020d_to_zarr.py
data/10224__10X__Visium__Mouse__brain__20191202__v1.0.0/: 10224_to_zarr.py
data/1025z__10X__Visium__Human__heart__20200623__v1.1.0/: 1025z_to_zarr.py
data/102cy__10X__Xenium__Human__skin__20230918__v1.6.0/: 102cy_to_zarr.py
data/102hp__10X__Visium__Mouse__lung_brain__20230221__v2.0.1__LungReplicate5/: 102hp_to_zarr.py
data/1031a__10X__Visium__Mouse__kidney__20191202__v1.0.0/: 1031a_to_zarr.py
data/1033x__10X__Visium__Human__breast__20201027__v1.2.0/: 1033x_to_zarr.py
data/1039v__10X__Visium__Mouse__brain__20200623__v1.1.0/: 1039v_to_zarr.py
data/103mc__10X__Visium__Mouse__kidney__20210816__v1.3.0/: 103mc_to_zarr.py
data/103mf__10X__Xenium__Human__lymph_node__20230717__v1.5.0/: 103mf_to_zarr.py
data/103sf__10X__Visium__Mouse__olfactory_bulb__20220324__v1.3.0/: 103sf_to_zarr.py
data/103sm__10X__Visium__Mouse__brain__20200623__v1.1.0/: 103sm_to_zarr.py
data/103te__10X__Visium__Mouse__brain__20200623__v1.1.0/: 103te_to_zarr.py
data/103uy__10X__Visium__Mouse__brain__20230608__v2.1.0/: 103uy_to_zarr.py
data/104cz__10X__Xenium__Mouse__brain__20230122__v1.0.2__Tinysubset/: 104cz_to_zarr.py
data/104dm__10X__Visium__Mouse__brain__20200623__v1.1.0/: 104dm_to_zarr.py
data/104dy__10X__Xenium__unknown__unknown__20230420__v1.3.0__HealthyBrain/: 104dy_to_zarr.py
data/104ee__10X__Visium__Human__brain__20200623__v1.1.0/: 104ee_to_zarr.py
data/104pe__10X__Visium__Mouse__brain__20220712__v2.0.0/: 104pe_to_zarr.py
data/105jc__10X__Visium__Human__lymph_node__20200623__v1.1.0/: 105jc_to_zarr.py
demo/: query_spatialdatadb.ipynb  test_get_artifact_wo_login.ipynb
docs/: api.md  conf.py  contributing.md
scripts/: add_metadata_from_csv.ipynb  add_metadata_from_csv.py  cleanup.ipynb  convert_to_sdata.ipynb  create_uids.ipynb  download_10X_data.ipynb  download_10X_data.py  get_license.ipynb  parse_10X_ST_table.ipynb  query_artifacts.ipynb  rename_on_lustre.ipynb  spatial_data_curator.ipynb  update_uid_master.py  upload_1000j_visium.ipynb  validator_demo.ipynb
tests/: conftest.py  test_basic.py
(+698 files in other folders)
